--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
       <div class="details-container color-container project-card">
         <div class="article-container">
-          <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
+          <img src="./project-assest//growskill.png" alt="Project 3" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title">Project Three</h2>
         <p class="project-description">hihdisfdfvfbhf</p>
@@ -416,6 +416,35 @@
     <img src="./images1/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
 
+
+
+  <section id="contact">
+    <p class="section__text__p1">Get in Touch</p>
+    <h1 class="title">Contact Me</h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./Images1/email.png" alt="Email icon" class="icon contact-icon email-icon" />
+        <p><a href="mailto:examplemail@gmail.com" id="contact-email">akashsharma01247@gmail.com</a></p>
+      </div>
+      <div class="contact-info-container">
+        <img src="./Images1/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+        <p><a id="contact-linkedin" href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+      </div>
+
+      <div class="contact-info-container">
+        <img src="./images/github.png" alt="github icon" class="icon contact-icon" />
+        <p><a id="contact-github" href="https://github.com/ak8459" target="_blank">Github</a></p>
+
+      </div>
+
+      <div class="contact-info-container">
+        <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
+        <p><a id="contact-phone">+918459148074</a></p>
+
+      </div>
+
+    </div>
+  </section>
 
 
 </body>
