--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
 
       <div class="contact-info-container">
         <img src="./images/github.png" alt="github icon" class="icon contact-icon" />
-        <p><a id="contact-github" href="https://github.com/ak8459" target="_blank">Github</a></p>
+        <p id="contact-github" ><a  href="https://github.com/ak8459" target="_blank">Github</a></p>
 
       </div>
 
       <div class="contact-info-container">
         <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
-        <p><a id="contact-phone">+918459148074</a></p>
+        <p  id="contact-phone" ><a>+918459148074</a></p>
 
       </div>
 
