--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       </div>
       <div class="contact-info-container">
         <img src="./Images1/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-        <p><a id="contact-linkedin" href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
+        <p><a id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank">LinkedIn</a></p>
       </div>
 
       <div class="contact-info-container">
