--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
         </button>
       </div>
       <div id="socials-container">
-        <img src="./Images1//linkedin.png" alt="My LinkedIn profile" class="icon"
+        <img src="./Images1//linkedin.png" id="contact-linkedin" alt="My LinkedIn profile" class="icon"
           onclick="window.open('https://www.linkedin.com/in/akash-sharma-7671b91b2/', '_blank')" />
-        <img src="./Images1//github.png" alt="My Github profile" class="icon"
+        <img src="./Images1//github.png" id="contact-github" alt="My Github profile" class="icon"
           onclick="window.open('https://github.com/ak8459', '_blank')" />
       </div>
     </div>
@@ -426,7 +426,7 @@
         <img src="./Images1/email.png" alt="Email icon" class="icon contact-icon email-icon" />
         <p><a href="mailto:examplemail@gmail.com" id="contact-email">akashsharma01247@gmail.com</a></p>
       </div>
-      <div class="contact-info-container">
+      <!-- <div class="contact-info-container">
         <img src="./Images1/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
         <p><a id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank">LinkedIn</a></p>
       </div>
@@ -435,12 +435,16 @@
         <img src="./images/github.png" alt="github icon" class="icon contact-icon" />
         <p id="contact-github" ><a  href="https://github.com/ak8459" target="_blank">Github</a></p>
 
+      </div> -->
+      <div class="contact-info-container">
+        <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
+        <p id="contact-phone"><a>+918459148074</a></p>
+
       </div>
 
       <div class="contact-info-container">
         <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
-        <p  id="contact-phone" ><a>+918459148074</a></p>
-
+        <p>Address :<a> Delhi, India</a></p>
       </div>
 
     </div>
