--- a/index.html
+++ b/index.html
@@ -317,7 +317,21 @@
         </div>
       </div>
     </div>
+    
     <img src="./images1/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+  </section>
+
+  <section class="github-stats">
+    <p class="section__text__p1">Explore My</p>
+    <h1 class="title">Github Statistics </h1>
+     <div class="github-streak-stats">
+       <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" id="github-streak-stats" />
+       <img src="https://github-readme-stats.vercel.app/api?username=ak8459&show_icons=true" id="github-stats-card" />
+     </div>
+     <div>
+       <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak8459&layout=donut" alt=""
+         id="github-top-langs"> 
+    </div>
   </section>
 
   <section id="projects">
@@ -410,6 +424,8 @@
         </div>
       </div>
 
+      
+ 
 
     </div>
     </div>
@@ -418,33 +434,25 @@
 
 
 
+
+
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="./Images1/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:examplemail@gmail.com" id="contact-email">akashsharma01247@gmail.com</a></p>
+        <img src="./Images1/gmai.png" alt="Email icon" class="icon contact-icon email-icon" />
+        <p><a href="mailto:akashsharma01247@gmail.com" id="contact-email">akashsharma01247@gmail.com</a></p>
       </div>
-      <!-- <div class="contact-info-container">
-        <img src="./Images1/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-        <p><a id="contact-linkedin" href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank">LinkedIn</a></p>
-      </div>
-
       <div class="contact-info-container">
-        <img src="./images/github.png" alt="github icon" class="icon contact-icon" />
-        <p id="contact-github" ><a  href="https://github.com/ak8459" target="_blank">Github</a></p>
-
-      </div> -->
-      <div class="contact-info-container">
-        <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
+        <img src="./Images1/Phone.png" alt="phone icon" class="icon contact-icon" />
         <p id="contact-phone"><a>+918459148074</a></p>
 
       </div>
 
       <div class="contact-info-container">
-        <img src="./Images1/kia.png" alt="phone icon" class="icon contact-icon" />
-        <p>Address :<a> Delhi, India</a></p>
+        <img src="./Images1/address.png" alt="phone icon" class="icon contact-icon" />
+        <p><a> Delhi, India</a></p>
       </div>
 
     </div>
