--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <li><a href="#skills" class="nav-link skills">Skills</a></li>
         <li><a href="#projects" class="nav-link projects">Projects</a></li>
         <li><a href="#contact" class="nav-link contact">Contact</a></li>
-        <li><a class="nav-link resume">Resume</a></li>
+        <li><a class="nav-link resume"  id="resume-button-1"  target="_blank">Resume</a></li>
       </ul>
     </div>
   </nav>
