--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
           in
           HTML, CSS, JavaScript, React, Node.js, Express, and MongoDB, I enjoy developing innovative websites
           and
-          web applications. With a strong ability to quickly learn new technologies, I'm eager to contribute
-          my
-          skills as a Web Development Engineer. Collaborative and driven, I'm excited to further my career in
+          web applications. With a strong ability to quickly learn new technologies.Collaborative and driven, I'm
+          excited to further my career in
           the
           dynamic field of web development.
         </p>
@@ -314,11 +313,10 @@
           <p>Collaborative project completed within a span of 5-day</p>
 
           <div id="project-link">
-            <a class="project-deployed-link" href="https://pro-task-gold.vercel.app" target="_blank">
+            <a class="project-deployed-link" href="https://spend-wise-ten.vercel.app/" target="_blank">
               <div>Demo</div>
             </a>
-            <a class="project-github-link" href="https://github.com/KrishnaVaishnav98/Task-Management-App"
-              target="_blank">
+            <a class="project-github-link" href="https://github.com/audacity07/puny-potato-4945" target="_blank">
               <div>Github</div>
             </a>
           </div>
@@ -458,19 +456,25 @@
 
     <!-- ------------------------------------ Github end ---------------------------------------- -->
     <div id="github-calendar"></div>
+    <!-- <script src="./index.js"></script> -->
+    <script>
+      GitHubCalendar("#github-calendar", "ak8459");
+    </script>
 
-   
     <!-- ------------------------------------ Contact  ---------------------------------------- -->
 
     <div id="contact">
 
       <div class="contact-details">
         <h1 class="contact-title">Contact</h1>
-        <p> <span class="names">Email :</span> akashsharma01247@gmail.com</p>
-        <p><span class="names">LinkedIn :</span> <a href="https://www.linkedin.com/in/akash-sharma-7671b91b2/">Akash
-            Sharma</a></p>
-        <p><span class="names">GitHub :</span> <a href="https://github.com/ak8459">ak8459</a></p>
-        <p><span class="names">Phone :</span> +91 8459148074</p>
+        <div class="contact-details-container">
+
+          <p> <span class="names">Email :</span> akashsharma01247@gmail.com</p>
+          <p><span class="names">LinkedIn :</span> <a href="https://www.linkedin.com/in/akash-sharma-7671b91b2/">
+              Akash Sharma</a></p>
+          <p><span class="names">GitHub :</span> <a href="https://github.com/ak8459">ak8459</a></p>
+          <p><span class="names">Phone :</span> +91 8459148074</p>
+        </div>
       </div>
       <div id="right-contact">
         <img class="contact-img" src="./Images/contact-i.jpg" alt="">
@@ -482,10 +486,7 @@
 
   </div>
 
-  <script src="./index.js"></script>
-  <script>
-    GitHubCalendar("#github-calendar", "ak8459");
-  </script>
+
   <script src="./index.js"></script>
 </body>
 
