--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
         <div class="contact-div">
           <a href="mailto:akashsharma01247@gmail.com">
             <div id="contact-email">
-              <img src="./Images/icons8-mail-100.png" alt="">
+              <img src="./imagess/gmail.png" alt="">
             </div>
           </a>
 
           <a href="https://github.com/ak8459">
             <div id="contact-github">
-              <img src="./Images/icons8-github-100.png" alt="">
+              <img src="./imagess/github.png" alt="">
             </div>
           </a>
 
           <a href="https://www.linkedin.com/in/akash-sharma-7671b91b2/">
             <div id="contact-linkedin">
-              <img src="./Images/icons8-linked-in-100.png" alt="">
+              <img src="./Project-images/linkedin.png" alt="">
             </div>
           </a>
 
           <a href=" tel:+918459148074">
             <div id="contact-phone">
-              <img src="./Images/icons8-phone-number-100.png" alt="">
+              <img src="./Project-images/Phone.png" alt="">
             </div>
           </a>
 
@@ -337,43 +337,43 @@
       <div class="skills-container">
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-react-160.png" alt="React" />
+            <img class="skills-card-img" src="./imagess/react-logo.png" alt="React" />
           </div>
           <p class="skills-card-name">React</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/html.png" alt="HTML" />
+            <img class="skills-card-img" src="./imagess/html-logo.png" alt="HTML" />
           </div>
           <p class="skills-card-name">HTML</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-css-100.png" />
+            <img class="skills-card-img" src="./imagess/css-logo.png" />
           </div>
           <p class="skills-card-name">CSS</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-javascript-100.png" alt="CSS" />
+            <img class="skills-card-img" src="./imagess/js-logo.png" alt="CSS" />
           </div>
           <p class="skills-card-name">JavaScript</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-chakra-ui-144.png" alt="Chakra UI" />
+            <img class="skills-card-img" src="./imagess/chakra.png" alt="Chakra UI" />
           </div>
           <p class="skills-card-name">Chakra UI</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-typescript-100.png" alt="TypeScript" />
+            <img class="skills-card-img" src="./imagess/type-script.png" alt="TypeScript" />
           </div>
           <p class="skills-card-name">TypeScript</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-redux-100.png" alt="Redux" />
+            <img class="skills-card-img" src="./imagess/redux (2).png" alt="Redux" />
           </div>
           <p class="skills-card-name">Redux</p>
         </div>
@@ -383,19 +383,19 @@
       <div class="skills-container">
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-node-js-128.png" alt="Node.js" />
+            <img class="skills-card-img" src="./imagess/node (2).png" alt="Node.js" />
           </div>
           <p class="skills-card-name">Node.js</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-express-js-100.png" alt="Express.js" />
+            <img class="skills-card-img" src="./imagess/express (2).png" alt="Express.js" />
           </div>
           <p class="skills-card-name">Express.js</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-microsoft-access-100.png" alt="MongoDB" />
+            <img class="skills-card-img" src="./imagess/mongo (2).png" alt="MongoDB" />
           </div>
           <p class="skills-card-name">MongoDB</p>
         </div>
@@ -405,20 +405,20 @@
       <div class="skills-container">
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-github-100.png" alt="GitHub" />
+            <img class="skills-card-img" src="./imagess/github.png" alt="GitHub" />
           </div>
           <p class="skills-card-name">GitHub</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img" src="Images/icons8-cypress-60.png" />
+            <img class="skills-card-img" src="./imagess/npm-logo.png" />
           </div>
-          <p class="skills-card-name">Cypress</p>
+          <p class="skills-card-name">NPM</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
             <img class="skills-card-img"
-              src="Images/icons8-netlify-a-cloud-computing-company-that-offers-hosting-and-serverless-backend-services-for-static-websites.-96.png"
+              src="./imagess/netlify.png"
               alt="Netlify" />
           </div>
           <p class="skills-card-name">Netlify</p>
@@ -426,9 +426,9 @@
         <div class="skills-card">
           <div class="skill-img">
             <img class="skills-card-img"
-              src="Images/icons8-postman-is-the-only-complete-api-development-environment-96.png" alt="Postman" />
+              src="./imagess/vsCode.png" alt="Postman" />
           </div>
-          <p class="skills-card-name">Postman</p>
+          <p class="skills-card-name">VScode</p>
         </div>
       </div>
     </div>
