--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
   <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
   <script src="https://cdn.jsdelivr.net/npm/github-calendar@2.0.0/dist/github-calendar.min.js"></script>
+
+  <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
+  </script>
+
 </head>
 
 <body>
@@ -44,9 +48,9 @@
       <a href="#projects" class="nav-link projects">Project</a>
       <a href="#contact" class="nav-link contact">Contact</a>
 
-      <a href="https://drive.google.com/file/d/1EvF0pptrfR8-92lElmrTlXIVGVM64Wyw/view?usp=drive_link" target="_blank"
+      <a 
         rel="noopener noreferrer" id="resume-link-1" id="resume-button-1" class="nav-link resume"
-        onclick=downloadResume()>
+        onclick="window.open('https://drive.google.com/file/d/1wvZcj1aU9Hm6J2BxiPX1N5UWo_k9EwHt/view?usp=drive_link', '_blank')">        
         Resume
       </a>
 
@@ -86,13 +90,13 @@
             </div>
           </a>
 
-          <a href="https://github.com/ak8459">
+          <a href="https://github.com/ak8459" target="_blank">
             <div id="contact-github">
               <img src="./imagess/github.png" alt="">
             </div>
           </a>
 
-          <a href="https://www.linkedin.com/in/akash-sharma-7671b91b2/">
+          <a href="https://www.linkedin.com/in/akash-sharma-7671b91b2/" target="_blank">
             <div id="contact-linkedin">
               <img src="./Project-images/linkedin.png" alt="">
             </div>
@@ -105,9 +109,8 @@
           </a>
 
 
-          <a href="https://drive.google.com/file/d/1EvF0pptrfR8-92lElmrTlXIVGVM64Wyw/view?usp=drive_link"
-            target="_blank" rel="noopener noreferrer" id="resume-link-2" id="resume-button-2" class="nav-link-resume"
-            onclick=downloadResume()>
+          <a href="./imagess/Akash-Sharma-Resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2"
+            id="resume-button-2" class="nav-link-resume" download>
             DOWNLOAD RESUME
           </a>
 
@@ -160,8 +163,8 @@
         </div>
         <div>
           <h2>Bachelor of Computer Application</h2>
-          <p>Civil Engineering</p>
           <p>Institute of Applied Medicines and Research</p>
+          <p>Ghaziabad,UP</p>
           <p>June 2019 - August 2022</p>
         </div>
         <div>
@@ -417,16 +420,13 @@
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img"
-              src="./imagess/netlify.png"
-              alt="Netlify" />
+            <img class="skills-card-img" src="./imagess/netlify.png" alt="Netlify" />
           </div>
           <p class="skills-card-name">Netlify</p>
         </div>
         <div class="skills-card">
           <div class="skill-img">
-            <img class="skills-card-img"
-              src="./imagess/vsCode.png" alt="Postman" />
+            <img class="skills-card-img" src="./imagess/vsCode.png" alt="Postman" />
           </div>
           <p class="skills-card-name">VScode</p>
         </div>
@@ -438,6 +438,7 @@
     <!-- ------------------------------------ Github ---------------------------------------- -->
     <div id="github">
       <h1 class="github-title">Github</h1>
+
       <div class="react-activity-calendar">
         <div id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=ak8459">
           <img src="https://github-readme-streak-stats.herokuapp.com?user=ak8459" alt="">
@@ -454,14 +455,15 @@
 
     </div>
 
-    <!-- ------------------------------------ Github end ---------------------------------------- -->
-    <div id="github-calendar"></div>
-    <!-- <script src="./index.js"></script> -->
-    <script>
-      GitHubCalendar("#github-calendar", "ak8459");
-    </script>
 
-    <!-- ------------------------------------ Contact  ---------------------------------------- -->
+
+    <!-- ------------------------------------ Github end ---------------------------------------- -->
+    <div id="github-calendar" class="git-calender">
+        
+    </div>
+    <!-- <script src="./index.js"></script> -->
+
+
 
     <div id="contact">
 
@@ -482,12 +484,17 @@
     </div>
 
 
-    <!-- ------------------------------------ Contact end ---------------------------------------- -->
 
   </div>
 
 
+
+  <!-- <script>
+    GitHubCalendar(".git-calender", "ak8459");
+  </script> -->
+
   <script src="./index.js"></script>
 </body>
+
 
 </html>
