--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a href="#contact" class="nav-link contact">Contact</a>
 
       <a rel="noopener noreferrer" id="resume-link-1" id="resume-button-1" class="nav-link resume"
-        onclick="window.open('https://drive.google.com/file/d/1wvZcj1aU9Hm6J2BxiPX1N5UWo_k9EwHt/view?usp=drive_link', '_blank',)"
+        onclick="window.open('https://shorturl.at/biyB6', '_blank',)"
         download >
         Resume
       </a>
