--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a href="#contact" class="nav-link contact">Contact</a>
 
       <a rel="noopener noreferrer" id="resume-link-1" id="resume-button-1" class="nav-link resume"
-        onclick="window.open('https://shorturl.at/biyB6', '_blank',)"
+        onclick="window.open('https://drive.google.com/file/d/1pUjKTCVANDb0ZBvXH-X1LCmjdaNS9tgR/view?usp=sharing', '_blank',)"
         download >
         Resume
       </a>
@@ -115,7 +115,7 @@
           </a>
 
 
-          <a href="./imagess/Akash-Sharma-Resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2"
+          <a href="./imagess/Akash_Sharma_Resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2"
             id="resume-button-2" class="nav-link-resume" download>
             DOWNLOAD RESUME
           </a>
